Fix Chakra Modal Z-Index (#643)

--- a/packages/ui-components/src/Modal/styles.scss
+++ b/packages/ui-components/src/Modal/styles.scss
@@ -4,6 +4,11 @@ body.ee-modal-open {
 	overflow: hidden;
 }
 
+.chakra-portal {
+	position: relative;
+	z-index: 9991;
+}
+
 .ee-modal {
 	.ee-modal {
 		&__header {
